--- a/nutrition.html
+++ b/nutrition.html
@@ -127,9 +127,14 @@
             <div class="nutrition-right">
                 <h2>Magnesium</h2>
                 <p>
-                    strength levels while reducing stress one of the reasons magnesium is so crucial for your health and
-                    your body composition is that it plays a significant role in the quality of your sleep the issue
-                    with magnesium is that many people happen to be deficient research indicates that only 15 to 50
+                    moving on to magnesium magnesium is crucial for your health and body composition and the average
+                    healthy body contains about 22 to 24 grams of this mineral having less of it or being deficient in
+                    magnesium can cause insulin resistance low testosterone depression bone loss high blood pressure
+                    stress hypersensitivity and disrupted neuromuscular functioning on the other hand research shows
+                    that getting enough magnesium boosts testosterone and strength levels while reducing stress one of
+                    the reasons magnesium is so crucial for your health and your body composition is that it plays a
+                    significant role in the quality of your sleep the issue with magnesium is that many people happen to
+                    be deficient research indicates that only 15 to 50
                     percent of americans consume enough magnesium plus we have data that shows that athletes likely need
                     at least 20 is needed for the repair of muscle tissue and because just like zinc magnesium does get
                     lost through your sweat now if you eat a lot of nutrient-dense foods especially lots of fruits
@@ -154,7 +159,21 @@
             </div>
 
             <div class="nutrition-left">1</div>
-            <div class="nutrition-right">2</div>
+            <div class="nutrition-right">
+                <h2>Omega 3</h2>
+                <p>
+                    next we have omega-3 fatty acids which are often overlooked for how important and beneficial they
+                    can be most people do recognize that omega-3 fatty acids have a broad range of health benefitsnext
+                    we have omega-3 fatty acids which are often overlooked for how important and beneficial they can be
+                    most people do recognize that omega-3 fatty acids have a broad range of health benefits including
+                    reducing inflammation enhancing cardiovascular health markers and reducing the risk of depression
+                    but not that many people know that consuming omega-3 fatty acids also boost muscle growth that's
+                    right increasing omega-3 intake enhances lean body mass and muscle growth that's actually a fact
+                    backed up by many different studies there are many reasons for this including that omega-3s can
+                    lower chronic inflammation levels protect against excessive muscle damage lower cortisol benefit
+                    testosterone levels enhance nutrient partitioning and raise muscle anabolic signaling
+                </p>
+            </div>
         </div>
     </section>
     <footer id="my-footer">
