Fixing nutrition page texts

--- a/nutrition.html
+++ b/nutrition.html
@@ -52,42 +52,23 @@
             <div class="nutrition-left"><img src="assets/images/cholesterol.jpg" alt=""></div>
             <div class="nutrition-right">
                 <h2>Cholesterol</h2>
-                <p>First is a nutrient that will probably surprise you cholesterol now i know doctors trainers and
-                    dietitians have been demonizing cholesterol for years now for its supposed negative effect on heart
-                    health however research now indicates that there's no link between cholesterol intake and the risk
-                    of
-                    heart disease even though we have this evidence many people and professionals still cling to the
-                    belief
-                    that cholesterol and high cholesterol foods like eggs are bad if that happens to be you and you're
-                    trying to build muscle you should also know that reducing your cholesterol intake can significantly
-                    impair muscle growth for example in a 12-week long strength training study the scientists observed a
-                    dose-response relationship between dietary cholesterol and gains in lean muscle mass they also
-                    mentioned
-                    that this link held up even when the data was controlled for protein intake in other words the more
-                    cholesterol the
-                    participants ate the more muscle they
-                    gained in response to resistance
-                    training regardless of how much protein
-                    that they took in so don't feel like you
-                    have to follow a low cholesterol diet
-                    it's not necessary for heart health and
-                    it can actually significantly blunt your
-                    muscle growth progress</p>
+                <p>First is a nutrient is cholesterol. If you are trying to build muscle you should also know that
+                    reducing your cholesterol intake can significantly impair muscle growth. In a 12-week long strength
+                    training study the scientists observed a dose-response relationship between dietary cholesterol and
+                    gains in lean muscle mass they also mentioned that this link held up even when the data was
+                    controlled for protein intake. In other words the more cholesterol the participants ate the more
+                    muscle they gained in response to resistance training regardless of how much protein that they took.
+                </p>
             </div>
 
             <div class="nutrition-left"><img src="assets/images/zinc.png" alt=""></div>
             <div class="nutrition-right">
                 <h2>Zinc</h2>
-                <p>
-                    next is a nutrient that i've talked about quite a bit because it's so important for athletes zinc
-                    it's well known that zinc
-                    is a crucial mineral for your immune system but very few people realize that it also plays a crucial
-                    role in
-                    maintaining and gaining muscle mass in fact research shows that a zinc deficiency directly causes
-                    lean body mass losses and these muscle losses can
-                    be restored with zinc consumption research also shows that even a small zinc deficiency can stunt
-                    growth and human development one reason not getting enough zinc can impair muscle growth is that it
-                    significantly lowers levels of
+                <p>Zinc is a crucial mineral for your immune system but very few people realize that it also plays a
+                    crucial role in maintaining and gaining muscle mass. In fact research shows that a zinc deficiency
+                    directly causes lean body mass losses and these muscle losses can be restored with zinc consumption.
+                    Research also shows that even a small zinc deficiency can stunt growth and human development. One
+                    reason not getting enough zinc can impair muscle growth is that it significantly lowers levels of
                     the primary male sex hormone testosterone which is obviously important for muscle growth
                 </p>
             </div>
@@ -96,12 +77,13 @@
             <div class="nutrition-right">
                 <h2>D3</h2>
                 <p>
-                    another very important vitamin for muscle growth is vitamin d3 this vitamin is produced naturally by
-                    the skin after exposure to ultraviolet radiation particularly uvb like what you get from sunlight
-                    vitamin d is important for people that want to improve their strength levels because it's required
+                    Another very important vitamin for muscle growth is vitamin d3. This vitamin is produced naturally
+                    by
+                    the skin after exposure to ultraviolet radiation, particularly uvb like what you get from sunlight.
+                    Vitamin d is important for people that want to improve their strength levels because it's required
                     for optimal bone strength immune function mineral metabolism neuromuscular functioning and
-                    testosterone synthesis that's why your vitamin d levels influence strength development so much and
-                    interestingly enough your vitamin d levels also impact how resistant you are to injuries
+                    testosterone synthesis, that's why your vitamin d levels influence strength development so much and
+                    interestingly enough your vitamin d levels also impact how resistant you are to injuries.
                 </p>
             </div>
 
@@ -111,15 +93,13 @@
             <div class="nutrition-right">
                 <h2>Water</h2>
                 <p>
-                    next is water believe me i know hydration isn't the most exciting topic in the fitness world but it
-                    is extremely important for several reasons first of all don't forget that your muscles are
+                    Water is extremely important for several reasons. First of all, don't forget that your muscles are
                     about 79 water this is actually one way that dehydration impairs strength even slight dehydration
-                    reduces things like the motivation to train body temperature control and of course exercise
-                    performance dehydration also blunts muscle growth by lowering muscle protein synthesis while raising
-                    protein breakdown just a two percent dehydration rate is enough to impair cognition attention and
-                    movement control so being dehydrated will prevent muscle growth on a biological level and will also
-                    reduce how well you can perform at the gym that's why it's important to stay hydrated from a muscle
-                    building.
+                    reduces things like the motivation to train body temperature control. Exercise performance
+                    dehydration also blunts muscle growth by lowering muscle protein synthesis while raising
+                    protein breakdown. Just a two percent dehydration rate is enough to impair cognition attention and
+                    movement control, so being dehydrated will prevent muscle growth on a biological level and will also
+                    reduce how well you can perform at the gym.
                 </p>
             </div>
 
