Finished nutrition page correction

--- a/nutrition.html
+++ b/nutrition.html
@@ -108,20 +108,13 @@
             </div>
             <div class="nutrition-right">
                 <h2>Magnesium</h2>
-                <p>
-                    moving on to magnesium magnesium is crucial for your health and body composition and the average
-                    healthy body contains about 22 to 24 grams of this mineral having less of it or being deficient in
-                    magnesium can cause insulin resistance low testosterone depression bone loss high blood pressure
-                    stress hypersensitivity and disrupted neuromuscular functioning on the other hand research shows
-                    that getting enough magnesium boosts testosterone and strength levels while reducing stress one of
+                <p> Magnesium is crucial for your health and body composition and the average healthy body contains
+                    about 22 to 24 grams of this mineral. Having less of it or being deficient in magnesium can cause
+                    insulin resistance, low testosterone, depression, bone los,s high blood pressure, stress
+                    hypersensitivity and disrupted neuromuscular functioning. On the other hand research shows
+                    that getting enough magnesium boosts testosterone and strength levels while reducing stress. One of
                     the reasons magnesium is so crucial for your health and your body composition is that it plays a
-                    significant role in the quality of your sleep the issue with magnesium is that many people happen to
-                    be deficient research indicates that only 15 to 50
-                    percent of americans consume enough magnesium plus we have data that shows that athletes likely need
-                    at least 20 is needed for the repair of muscle tissue and because just like zinc magnesium does get
-                    lost through your sweat now if you eat a lot of nutrient-dense foods especially lots of fruits
-                    vegetables nuts and beans you might get more than enough magnesium but to be on the safe side it's
-                    generally a good idea to take a magnesium supplement
+                    significant role in the quality of your sleep.
                 </p>
             </div>
 
@@ -130,15 +123,11 @@
             </div>
             <div class="nutrition-right">
                 <h2>Creatine</h2>
-                <p>
-                    another nutrient that can highly influence muscle growth is of course creatine creatine is an
-                    organic molecule produced mainly in the liver and to a lesser extent in the kidneys and the
-                    pancreas this molecule enhances phosphocreatine storage in your muscles which increases the amount
-                    of phosphate availability for atp recycling bottom line is that your muscles can produce more energy
-                    that's why supplementing with creatine can enhance strength power and general workout performance as
-                    i said creatine supplementation is also excellent for muscle growth for example we have a study that
-                    found that men that trained for six weeks and also supplemented with creatine gained on average two
-                    kilograms more muscle mass than men that received a placebo instead
+                <p> Creatine creatine is an organic molecule produced mainly in the liver and to a lesser extent in the
+                    kidneys and the pancreas. This molecule enhances phosphocreatine storage in your muscles which
+                    increases the amount of phosphate availability for atp recycling. Bottom line is that your muscles
+                    can produce more energy. That's why supplementing with creatine can enhance strength power and
+                    general workout performance.
                 </p>
             </div>
 
@@ -147,17 +136,12 @@
             </div>
             <div class="nutrition-right">
                 <h2>Omega-3</h2>
-                <p>
-                    next we have omega-3 fatty acids which are often overlooked for how important and beneficial they
-                    can be most people do recognize that omega-3 fatty acids have a broad range of health benefitsnext
-                    we have omega-3 fatty acids which are often overlooked for how important and beneficial they can be
-                    most people do recognize that omega-3 fatty acids have a broad range of health benefits including
-                    reducing inflammation enhancing cardiovascular health markers and reducing the risk of depression
-                    but not that many people know that consuming omega-3 fatty acids also boost muscle growth that's
-                    right increasing omega-3 intake enhances lean body mass and muscle growth that's actually a fact
-                    backed up by many different studies there are many reasons for this including that omega-3s can
-                    lower chronic inflammation levels protect against excessive muscle damage lower cortisol benefit
-                    testosterone levels enhance nutrient partitioning and raise muscle anabolic signaling
+                <p>Omega-3 fatty acids have a broad range of health benefits including reducing inflammation, enhancing
+                    cardiovascular health markers and reducing the risk of depression. But not that many people know
+                    that consuming omega-3 fatty acids also boost muscle growth. Increasing omega-3 intake enhances lean
+                    body mass and muscle growth and can lower chronic inflammation levels, protect against excessive
+                    muscle damage, lower cortisol, benefit testosterone levels, enhance nutrient partitioning and raise
+                    muscle anabolic signaling.
                 </p>
             </div>
         </div>
