--- a/signup.html
+++ b/signup.html
@@ -42,6 +42,71 @@
             </div>
         </div>
     </section>
+    <section class="program-info">
+        <div class="container">
+            <div class="program-one">1</div>
+            <div class="program-two">2</div>
+            <div class="program-three">1</div>
+
+            <div class="program-one">1</div>
+            <div class="program-two">2</div>
+            <div class="program-three">1</div>
+
+            <div class="program-one">1</div>
+            <div class="program-two">2</div>
+            <div class="program-three">1</div>
+
+            <div class="program-one">1</div>
+            <div class="program-two">2</div>
+            <div class="program-three">1</div>
+
+            <div class="program-one">1</div>
+            <div class="program-two">2</div>
+            <div class="program-three">1</div>
+
+        </div>
+    </section>
+    <section id="fitness-equipment">
+        <div class="container">
+            <div class="card">
+                <img src="assets/images/membership.png" alt="membership image" /
+                    style="width:100%;height:80%;border-radius: 1%;">
+                <h2>Sign up</h2>
+                <p>Sign up today and get personalized training programme
+                </p>
+            </div>
+            <div class="sign-card">
+                <form action="/action_page.php">
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
+
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                    <label for="country">Country</label>
+                    <select id="country" name="country">
+                        <option value="australia">Australia</option>
+                        <option value="canada">Canada</option>
+                        <option value="usa">USA</option>
+                    </select>
+                    <p>yyy</p>
+                    <input type="radio" id="vehicle1" name="vehicle1" value="Bike">
+                    <label for="vehicle1"> I have a bike</label><br>
+                    <input type="radio" id="vehicle2" name="vehicle2" value="Car">
+                    <label for="vehicle2"> I have a car</label><br>
+                    <input type="radio" id="vehicle3" name="vehicle3" value="Boat">
+                    <label for="vehicle3"> I have a boat</label><br><br>
+                    <label for="birthday">Birthday:</label>
+                    <input type="date" id="birthday" name="birthday"><br>
+                    <label for="email">Enter your email:</label>
+                    <input type="email" id="email" name="email"><br>
+                    <input type="submit" value="Submit">
+                    <input type="reset">
+                </form>
+            </div>
+        </div>
+    </section>
     <footer id="my-footer">
         <div class="container">
             <div class="footer-card">
