Making sign up page changes

--- a/signup.html
+++ b/signup.html
@@ -76,7 +76,7 @@
                 </p>
             </div>
             <div class="sign-card">
-                <form action="/action_page.php">
+                <form action="https://formdump.codeinstitute.net" method="POST">
                     <label for="fname">First Name</label>
                     <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
 
@@ -89,15 +89,18 @@
                         <option value="australia">Australia</option>
                         <option value="canada">Canada</option>
                         <option value="usa">USA</option>
+                        <option value="australia">Australia</option>
                     </select>
-                    <p>yyy</p>
-                    <input type="radio" id="vehicle1" name="vehicle1" value="Bike">
-                    <label for="vehicle1"> I have a bike</label><br>
-                    <input type="radio" id="vehicle2" name="vehicle2" value="Car">
-                    <label for="vehicle2"> I have a car</label><br>
-                    <input type="radio" id="vehicle3" name="vehicle3" value="Boat">
-                    <label for="vehicle3"> I have a boat</label><br><br>
-                    <label for="birthday">Birthday:</label>
+                    <h3>Chose prefered equipment</h3>
+                    <input type="radio" id="gear1" name="gear" value="Barbells">
+                    <label for="gear1"> Barbells</label><br>
+                    <input type="radio" id="gear2" name="gear" value="Dumbells">
+                    <label for="gear2"> Dumbells</label><br>
+                    <input type="radio" id="gear3" name="gear" value="Kettlebells">
+                    <label for="gear3"> Kettlebells</label><br>
+                    <input type="radio" id="gear4" name="gear" value="Calisthenics">
+                    <label for="gear4"> Calisthenics</label><br><br>
+                    <label for="birthday">Date of birth:</label>
                     <input type="date" id="birthday" name="birthday"><br>
                     <label for="email">Enter your email:</label>
                     <input type="email" id="email" name="email"><br>
