--- a/signup.html
+++ b/signup.html
@@ -84,22 +84,21 @@
                     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
                     <label for="lname">Last Name</label>
                     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-                    <label for="country">Country</label>
-                    <select id="country" name="country">
-                        <option value="australia">Australia</option>
-                        <option value="canada">Canada</option>
-                        <option value="usa">USA</option>
-                        <option value="australia">Australia</option>
+                    <label for="label-equipment">Choose prefered equipment</label>
+                    <select id="label-equipment" name="country">
+                        <option value="Barbells">Barbells</option>
+                        <option value="Calisthenics">Calisthenics</option>
+                        <option value="Dumbells">Dumbells</option>
+                        <option value="Kettlebells">Kettlebells</option>
                     </select>
-                    <h3>Chose prefered equipment</h3>
-                    <input type="radio" id="gear1" name="gear" value="Barbells">
+                    <p>Gender</p>
+                    <input type="radio" id="gear1" name="gender" value="Male">
                     <label for="gear1"> Barbells</label><br>
-                    <input type="radio" id="gear2" name="gear" value="Dumbells">
+                    <input type="radio" id="gear2" name="gear" value="Female">
                     <label for="gear2"> Dumbells</label><br>
-                    <input type="radio" id="gear3" name="gear" value="Kettlebells">
+                    <input type="radio" id="gear3" name="gear" value="None">
                     <label for="gear3"> Kettlebells</label><br>
-                    <input type="radio" id="gear4" name="gear" value="Calisthenics">
-                    <label for="gear4"> Calisthenics</label><br><br>
+                    <br><br>
                     <label for="birthday">Date of birth:</label>
                     <input type="date" id="birthday" name="birthday"><br>
                     <label for="email">Enter your email:</label>
