Adding result images

--- a/signup.html
+++ b/signup.html
@@ -44,8 +44,8 @@
     </section>
     <section class="program-info">
         <div class="container">
-            <div class="program-one">1</div>
-            <div class="program-two">2</div>
+            <div class="program-one"><img src="assets/images/Dan-Platt-Before.jpg"></div>
+            <div class="program-two"><img src="assets/images/Dan-Platt-After.jpg"></div>
             <div class="program-three">1</div>
 
             <div class="program-one">1</div>
