Fixing signup bugs

--- a/signup.html
+++ b/signup.html
@@ -93,9 +93,9 @@
                     </select>
                     <p>Gender</p>
                     <input type="radio" id="gear1" name="gender" value="Male">
-                    <label for="gear1"> Barbells</label><br>
+                    <label for="gear1"> Barbells</label>
                     <input type="radio" id="gear2" name="gear" value="Female">
-                    <label for="gear2"> Dumbells</label><br>
+                    <label for="gear2"> Dumbells</label>
                     <input type="radio" id="gear3" name="gear" value="None">
                     <label for="gear3"> Kettlebells</label><br>
                     <br><br>
