Sigbup before-after

--- a/signup.html
+++ b/signup.html
@@ -46,24 +46,46 @@
         <div class="container">
             <div class="program-one"><img src="assets/images/Dan-Platt-Before.jpg"></div>
             <div class="program-two"><img src="assets/images/Dan-Platt-After.jpg"></div>
-            <div class="program-three">1</div>
+            <div class="program-three">
+                <h2>DAN PLATT: 50 WOODLAND HILLS, CALIFORNIA</h2>
+                <p>
+                    I watched just about every YouTube video that Jeff Cavaliere uploaded to his ATHLEAN-X channel and
+                    became convinced that his philosophy and exercise method were second to none, intense and
+                    challenging
+                    (but not impossible), and exactly the right prescription for me to lean out and tone up. As a full
+                    time
+                    special effects artist (with credits on Tron Legacy, X-Men First Class and known for bringing the
+                    late
+                    Tupac Shakur back to life as a "hologram"), the ATHLEAN-X program was the perfect fit for my busy
+                    schedule.
+                </p>
 
-            <div class="program-one">1</div>
-            <div class="program-two">2</div>
-            <div class="program-three">1</div>
+            </div>
 
-            <div class="program-one">1</div>
-            <div class="program-two">2</div>
-            <div class="program-three">1</div>
+            <div class="program-one"><img src="assets/images/barner-jones-before.jpg"></div>
+            <div class="program-two"><img src="assets/images/barner-jones-after.jpg"></div>
+            <div class="program-three">
+                <h2>BARNER JONES: 34 SAN DIEGO, CALIFORNIA</h2>
+                <p>
+                    In January of 2010 I was 224lbs and was battling shedding the 24 lbs to be my goal weight of 200. I
+                    had spent years of hard work and developing my plan alone I decided if I ever wanted to reach my
+                    "true goals" I needed help. However, for me, as my travel schedule is very hectic for my job, it is
+                    not always easy to have a trainer. I was considering many alternatives however after reviewing
+                    programs like P90X, I found ATHLEAN-X. I jumped on the program and shed the last 24 lbs, and ever
+                    since have been using Jeff's programs and and challenges in my everyday workout.
+                </p>
+            </div>
 
-            <div class="program-one">1</div>
-            <div class="program-two">2</div>
-            <div class="program-three">1</div>
-
-            <div class="program-one">1</div>
-            <div class="program-two">2</div>
-            <div class="program-three">1</div>
-
+            <div class="program-one"><img src="assets/images/greg-ulmer-before.jpg"></div>
+            <div class="program-two"><img src="assets/images/greg-ulmer-after.jpg"></div>
+            <div class="program-three">
+                <h2>GREG ULMER: 40 ST. AUGUSTINE , FLORIDA</h2>
+                <p>I've been training with the ATHLEAN-X system for about a year now and could not be happier. ATHLEAN-X
+                    has helped me to lose over 40 pounds and I am still seeing changes in my body everyday. I love the
+                    quick high intensity workouts. The program is laid out all in front of you and super easy to follow.
+                    I've noticed great changes at the gym I am getting stronger and can see more definition in my body.
+                    Can't go wrong with ATHLEAN-X I recommend it to all my friends. THANKS JEFF. </p>
+            </div>
         </div>
     </section>
     <section id="fitness-equipment">
