--- a/signup.html
+++ b/signup.html
@@ -88,7 +88,7 @@
             </div>
         </div>
     </section>
-    <section id="fitness-equipment">
+    <section id="signup-form">
         <div class="container">
             <div class="card">
                 <img src="assets/images/membership.png" alt="membership image" /
@@ -101,30 +101,29 @@
                 <form action="https://formdump.codeinstitute.net" method="POST">
                     <label for="fname">First Name</label>
                     <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
-
                     <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-                    <label for="label-equipment">Choose prefered equipment</label>
-                    <select id="label-equipment" name="country">
-                        <option value="Barbells">Barbells</option>
-                        <option value="Calisthenics">Calisthenics</option>
-                        <option value="Dumbells">Dumbells</option>
-                        <option value="Kettlebells">Kettlebells</option>
-                    </select>
-                    <p>Gender</p>
-                    <input type="radio" id="gear1" name="gender" value="Male">
-                    <label for="gear1"> Barbells</label>
-                    <input type="radio" id="gear2" name="gear" value="Female">
-                    <label for="gear2"> Dumbells</label>
-                    <input type="radio" id="gear3" name="gear" value="None">
-                    <label for="gear3"> Kettlebells</label><br>
-                    <br><br>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
                     <label for="birthday">Date of birth:</label>
-                    <input type="date" id="birthday" name="birthday"><br>
+                    <input type="date" id="birthday" name="birthday" required><br>
                     <label for="email">Enter your email:</label>
-                    <input type="email" id="email" name="email"><br>
+                    <input type="email" id="email" name="email" required><br>
+                    <label for="label-equipment">Choose prefered equipment:</label><br>
+                    <input type="radio" id="gear1" name="gear" value="Barbells"  checked="checked">
+                    <label for="gear1"> Barbells</label>
+                    <input type="radio" id="gear2" name="gear" value="Dumbells">
+                    <label for="gear2"> Dumbells</label>
+                    <input type="radio" id="gear3" name="gear" value="Kettlebells">
+                    <label for="gear3"> Kettlebells</label>
+                    <input type="radio" id="gear4" name="gear" value="Calisthenics">
+                    <label for="gear4"> Calisthenics</label><br><br>
+                    <p>Select your gender:</p>
+                    <input type="radio" id="gender1" name="gender" value="Male"  checked="checked">
+                    <label for="gender1"> Barbells</label>
+                    <input type="radio" id="gender2" name="gender" value="Female">
+                    <label for="gender2"> Dumbells</label>
+                    <input type="radio" id="gender3" name="gender" value="None">
+                    <label for="gender3"> Kettlebells</label><br>
+                    <br>
                     <input type="submit" value="Submit">
                     <input type="reset">
                 </form>
