--- a/signup.html
+++ b/signup.html
@@ -118,11 +118,11 @@
                     <label for="gear4"> Calisthenics</label><br><br>
                     <p>Select your gender:</p>
                     <input type="radio" id="gender1" name="gender" value="Male"  checked="checked">
-                    <label for="gender1"> Barbells</label>
+                    <label for="gender1"> Male</label>
                     <input type="radio" id="gender2" name="gender" value="Female">
-                    <label for="gender2"> Dumbells</label>
+                    <label for="gender2"> Female</label>
                     <input type="radio" id="gender3" name="gender" value="None">
-                    <label for="gender3"> Kettlebells</label><br>
+                    <label for="gender3"> Don't want to choose</label><br>
                     <br>
                     <input type="submit" value="Submit">
                     <input type="reset">
