Fixed nutrition banner

--- a/nutrition.html
+++ b/nutrition.html
@@ -36,11 +36,9 @@
                 <div class="main-heading">
                     <h1>Fuel your body</h1>
                     <p>
-                        We all know that you need to eat protein to build muscle. Carbs and fats help
-                        provide the energy needed to fuel your physical activities, but these are just
-                        the macronutrients. Most people are completely unaware of the powerful effects that
-                        certain vitamins and minerals or micronutrients having your capacity to build more
-                        muscle recover faster and to see better results.
+                        Most people are completely unaware of the powerful effects that
+                        certain vitamins and minerals or micronutrients have a capacity to build more
+                        muscle and recover faster to see better results.
                     </p>
                 </div>
             </div>
