Fixing html errorw

--- a/signup.html
+++ b/signup.html
@@ -44,8 +44,10 @@
     </section>
     <section class="program-info">
         <div class="container">
-            <div class="program-one"><img src="assets/images/Dan-Platt-Before.jpg"></div>
-            <div class="program-two"><img src="assets/images/Dan-Platt-After.jpg"></div>
+            <div class="program-one"><img src="assets/images/dan-platt-before.jpg"
+                    alt="Dan Platt before transformation"></div>
+            <div class="program-two"><img src="assets/images/dan-platt-after.jpg" alt="Dan Platt after transformation">
+            </div>
             <div class="program-three">
                 <h2>DAN PLATT: 50 WOODLAND HILLS, CALIFORNIA</h2>
                 <p>
@@ -62,8 +64,10 @@
 
             </div>
 
-            <div class="program-one"><img src="assets/images/barner-jones-before.jpg"></div>
-            <div class="program-two"><img src="assets/images/barner-jones-after.jpg"></div>
+            <div class="program-one"><img src="assets/images/barner-jones-before.jpg"
+                    alt="Barner Jones before transformation"></div>
+            <div class="program-two"><img src="assets/images/barner-jones-after.jpg"
+                    alt="Barner Jones after transformation"></div>
             <div class="program-three">
                 <h2>BARNER JONES: 34 SAN DIEGO, CALIFORNIA</h2>
                 <p>
@@ -76,8 +80,10 @@
                 </p>
             </div>
 
-            <div class="program-one"><img src="assets/images/greg-ulmer-before.jpg"></div>
-            <div class="program-two"><img src="assets/images/greg-ulmer-after.jpg"></div>
+            <div class="program-one"><img src="assets/images/greg-ulmer-before.jpg"
+                    alt="Greg Ulmer before transformation"></div>
+            <div class="program-two"><img src="assets/images/greg-ulmer-after.jpg"
+                    alt="Greg Ulmer after transformation"></div>
             <div class="program-three">
                 <h2>GREG ULMER: 40 ST. AUGUSTINE , FLORIDA</h2>
                 <p>I've been training with the ATHLEAN-X system for about a year now and could not be happier. ATHLEAN-X
@@ -91,7 +97,7 @@
     <section id="signup-form">
         <div class="container">
             <div class="card">
-                <img src="assets/images/membership.png" alt="membership image" /
+                <img src="assets/images/membership.png" alt="membership image"
                     style="width:100%;height:80%;border-radius: 1%;">
                 <h2>Sign up</h2>
                 <p>Sign up today and get personalized training programme
@@ -108,7 +114,7 @@
                     <label for="email">Enter your email:</label>
                     <input type="email" id="email" name="email" required><br>
                     <label for="label-equipment">Choose prefered equipment:</label><br>
-                    <input type="radio" id="gear1" name="gear" value="Barbells"  checked="checked">
+                    <input type="radio" id="gear1" name="gear" value="Barbells" checked="checked">
                     <label for="gear1"> Barbells</label>
                     <input type="radio" id="gear2" name="gear" value="Dumbells">
                     <label for="gear2"> Dumbells</label>
@@ -117,7 +123,7 @@
                     <input type="radio" id="gear4" name="gear" value="Calisthenics">
                     <label for="gear4"> Calisthenics</label><br><br>
                     <p>Select your gender:</p>
-                    <input type="radio" id="gender1" name="gender" value="Male"  checked="checked">
+                    <input type="radio" id="gender1" name="gender" value="Male" checked="checked">
                     <label for="gender1"> Male</label>
                     <input type="radio" id="gender2" name="gender" value="Female">
                     <label for="gender2"> Female</label>
